<resources>
    <string name="app_name">Game Suit</string>
    <string name="batu">Batu</string>
    <string name="kertas">Kertas</string>
    <string name="gunting">Gunting</string>
    <string name="pemain">Pemain</string>
    <string name="player_choose">%1$s Chooses %2$s</string>
    <string name="havent_choose">%1$s haven\'t chosen anything</string>
    <string name="pemain1">Pemain 2</string>
    <string name="com">COM</string>
    <string name="choose_first">%1$s Choose first</string>
    <string name="vs">VS</string>
    <string name="pemainwin">Pemain \n Win!</string>
    <string name="comwin">Computer \n Win!</string>
    <string name="draw">Draw</string>
    <string name="refresh">refresh</string>
    <string name="splash">splash</string>
    <string name="url_tekssplashscreen">https://i.ibb.co/HC5ZPgD/splash-screen1.png</string>
    <string name="text_first_page">Bermain suit melawan \n sesama pemain.</string>
    <string name="text_second_page">Bermain suit melawan \n komputer.</string>
    <string name="text_third_page">Tuliskan nama mu dibawah</string>
    <string name="pilihlawanmu">PILIH LAWANMU</string>
    <string name="pemain2">Pemain vs Pemain</string>
    <string name="pemaincpu">Pemain vs CPU</string>
    <string name="max_char">Maksimal 7 karakter yaa :D</string>
    <string name="close">close</string>
    <string name="pilih_lawanmu">PILIH LAWANMU</string>
    <string name="pemain_vs_pemain">%1$s vs Pemain</string>
    <string name="pemain_vs_cpu">%1$s vs CPU</string>
    <string name="next">next</string>
    <string name="user">user</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="hasil_menang">Boy Menang</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_score">Top Score</string>
    <string name="history">History</string>
    <string name="shop">Shop</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="username">Username</string>
    <string name="let_s_play_game">Let\'s Play Game</string>
    <string name="profile">Profile</string>
    <string name="next1">Next</string>
    <string name="new_password">New Password</string>
    <string name="password_new_confrimasi">Password New Confrimasi</string>
    <string name="update">Update</string>
    <string name="success">Success</string>
    <string name="exit">Exit </string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="register_success">Register Success</string>
    <string name="_1">1</string>
    <string name="jumlah_menang">Jumlah Menang :</string>
    <string name="jumlah_kalah">Jumlah Kalah :</string>
    <string name="apakah_anda_ingin_logout">Apakah anda\ningin Logout ?</string>
    <string name="date">Date</string>
    <string name="point">Point</string>
    <string name="show">Show</string>
    <string name="cara_bermain">Cara Bermain\nGame\nBatu Kertas Gunting</string>
    <string name="sign_out">Sign Out</string>
    <string name="confrimasi_password">Confrimasi password</string>
    <string name="skin_gunting_level_up_n_jumlah_point_100">SKIN GUNTING LEVEL UP \n JUMLAH POINT : 100</string>
    <string name="tukar_point">TUKAR POINT</string>
    <string name="skin_kertas_level_up_n_jumlah_point_100">SKIN KERTAS LEVEL UP \n JUMLAH POINT : 100</string>
    <string name="skin_batu_level_up_n_jumlah_point_100">SKIN BATU LEVEL UP \n JUMLAH POINT : 100</string>
    <string name="language_korean">korean</string>
    <string name="language_france">France</string>
    <string name="language_japanese">Japanese</string>
    <string name="detail_release_date">tanggal sortie</string>
    <string name="nightmode">night mode</string>
    <string name="welcome">welcome</string>
    <string name="toolbar_title">toolbar_title</string>
    <string name="toolbar_description">toolbar_description</string>
    <string name="no_favorite_data">no_favorite_data</string>
    <string name="matikan_musik">Matikan Musik</string>
    <string name="hidupkan_musik">Hidupkan Musik</string>
    <string name="description_text">description_text</string>
    <string name="delete">DELETE</string>
    <string name="item_movie_title">item_movie_title</string>
    <string name="item_movie_category">item_movie_category</string>
    <string name="item_movie_description">item_movie_description</string>
    <string name="poster_description_text">poster_description_text</string>
    <string name="setting">SETTING</string>
    <string name="background">Konteks</string>
    <string name="sound">Sound</string>
    <string name="language">Language</string>
    <string name="favorite">Favorite</string>
    <string name="toolbar_favorite">Favorite</string>
    <string name="description">Description</string>
    <string name="select_language">Select language</string>
    <string name="main_activity_title">main_activity_title</string>
    <string name="main_activity_desc">main_activity_desc</string>
    <string name="main_activity_about">main_activity_about</string>
    <string name="main_second_activity">main_second_activity</string>
    <string name="main_activity_to_tr_button">main_activity_to_tr_button</string>
    <string name="main_activity_to_en_button">main_activity_to_en_button</string>
    <string name="japanese_language">JAPAN</string>
    <string name="koreanese_language">KOREAN</string>
    <string name="frenchise_language">FRANCE</string>
    <string name="pilih_bahasa">PILIH BAHASA</string>
    <string name="menang">Gagner</string>
    <string-array name="languages">
        <item>JAPAN</item>
        <item>KOREAN</item>
        <item>FRANCE</item>
    </string-array>

</resources>