<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.game.player.GamePlayerActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <TextView
        android:id="@+id/pemain1"
        style="@style/user"
        android:layout_marginStart="16dp"
        android:text="@string/pemain"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/com" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@color/background_draw"
        android:text="@string/show"
        android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linebawah" />

    <ImageView
        android:id="@+id/iv_batu1"
        style="@style/btn_style"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintBottom_toBottomOf="@+id/iv_batu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_batu2" />

    <ImageView
        android:id="@+id/iv_kertas1"
        style="@style/btn_style"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kertas2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_kertas2" />

    <ImageView
        android:id="@+id/iv_gunting1"
        style="@style/btn_style"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintBottom_toBottomOf="@+id/iv_gunting2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_gunting2" />

    <TextView
        android:id="@+id/com"
        style="@style/user"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pemain1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineatas" />

    <ImageView
        android:id="@+id/iv_batu2"
        style="@style/btn_style"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintBottom_toTopOf="@+id/iv_kertas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com" />

    <ImageView
        android:id="@+id/iv_kertas2"
        style="@style/btn_style"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintBottom_toTopOf="@+id/iv_gunting2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_batu2" />

    <ImageView
        android:id="@+id/iv_gunting2"
        style="@style/btn_style"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintBottom_toTopOf="@id/linebawah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_kertas2" />

    <ImageView
        android:id="@+id/iv_refresh"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/refresh"
        android:padding="10dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linebawah" />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/comicsans"
        android:gravity="center"
        android:rotation="-17"
        android:text="@string/vs"
        android:textColor="@color/merah"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_kertas1"
        app:layout_constraintEnd_toStartOf="@id/iv_kertas2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/iv_kertas1"
        app:layout_constraintTop_toTopOf="@+id/iv_kertas2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linebawah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="622dp" />

</androidx.constraintlayout.widget.ConstraintLayout>