<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ui.leaderboard.ItemTopscoreActivity">

    <RelativeLayout
        android:id="@+id/itemLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <TextView
            android:id="@+id/tv_Rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/comicsans"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/AvatarPlayer"
            style="@style/image_style"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/tv_Rank"
            android:contentDescription="@string/choose_avatar"
            android:src="@drawable/avatar1"
            app:civ_circle_background_color="#666666"

            />

        <TextView
            android:id="@+id/namaPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/AvatarPlayer"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namaPlayer"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/AvatarPlayer"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/jumlah_menang"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/angkamenang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namaPlayer"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/date"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/jumlahkalah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/AvatarPlayer"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/jumlah_kalah"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/angkakalah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/angkamenang"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/jumlahkalah"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>