<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.history.ItemHistoryActivity">

    <RelativeLayout
        android:id="@+id/itemLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/AvatarPlayer"
            style="@style/image_style"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/choose_avatar"
            android:src="@drawable/avatar1"
            app:civ_circle_background_color="@color/background_draw" />

        <TextView
            android:id="@+id/namaPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/AvatarPlayer"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namaPlayer"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/AvatarPlayer"
            android:fontFamily="@font/comicsans"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>