<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_biru">


        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10sp"
            android:src="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/description_text"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/delete_icon" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_margin="15sp"
            android:layout_height="178dp"
            app:cardCornerRadius="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="120dp"
                android:orientation="vertical"
                android:layout_marginStart="120dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/posterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_movie_title"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:clickable="false"
                    android:numStars="5"
                    android:rating="4"
                    android:stepSize="0.5"
                    android:layout_marginTop="5dp"
                    android:theme="@style/CardView.Light"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:progressTint="@color/biru"
                    android:progressBackgroundTint="@color/design_default_color_surface"
                    android:secondaryProgressTint="@android:color/transparent"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/posterReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_surface"
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:text="@string/item_movie_category" />


                <TextView
                    android:id="@+id/posterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLength="73"
                    android:text="@string/item_movie_description" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignTop="@id/cardView"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="30dp"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="30dp"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/poster_aquaman"
                android:contentDescription="@string/poster_description_text" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>